# heating

./: # Spielkram.py  .gitignore  .python-version  README.md  Spielkramtable.py  api.py  dataview.py  dataview_kessel.py  dataview_sensor.py  dataview_zeitst.py  db-access.py  dbinit.py  erg.txt  gui.py  guidb.py  heizung.db  ipconfig.txt  main.py  mvp_table.py  pyproject.toml  sensors.py  settings.py  spielkram.py  table.py  vorlage.txt  zeit.py
