[tool.poetry]
name = "heating"
version = "0.1.0"
description = "Ersatz für Buderus Steuerung"
authors = ["Rotbart17 <dronte900@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python      = "^3.10"
logging     = "^0.4.9.6"
nicegui     = "^1.4.8"
databases   = "^0.8.0"
asyncio     = "^3.4.3"
aiosqlite   = "^0.19.0"
pandas      = "^2.1.4"
pywebview = "^4.4.1"
pycairo = "^1.25.1"
pygobject = "^3.46.0"
plotly = "^5.18.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
