[tool.poetry]
name = "heating"
version = "0.1.0"
description = "Ersatz für Buderus Steuerung"
authors = ["Rotbart17 <dronte900@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python      = "^3.10"
logging     = "^0.4.9.6"
nicegui     = "^2.8.1"
databases   = "^0.9.0"
asyncio     = "^3.4.3"
aiosqlite   = "^0.20.0"
pandas      = "^2.2.3"
pywebview = "^5.3.2"
pycairo = "^1.27.0"
pygobject = "^3.50.0"
plotly = "^5.24.1"

